--- a/package.json
+++ b/package.json
@@ -24,12 +24,17 @@
     "@fullcalendar/interaction": "^4.3.0",
     "@fullcalendar/list": "^4.3.0",
     "@fullcalendar/timegrid": "^4.3.0",
+    "angularfire2": "^5.2.1",
     "bootstrap": "^4.3.1",
+    "firebase": "^6.6.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "primeicons": "^2.0.0",
     "primeng": "^8.0.3",
     "rxjs": "~6.4.0",
+    "tooltip.js": "^1.3.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
