--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@fullcalendar/timegrid": "^4.3.0",
     "angularfire2": "^5.2.1",
     "bootstrap": "^4.3.1",
+    "ddr-block-list": "^8.0.1",
+    "ddr-configuration": "^8.0.1",
     "firebase": "^6.6.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
